# candat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: make_fish.py
src/candat/: __init__.py  app.py  bigtable.py  buffers.py  chords.py  clipboard.py  commands.py  config.py  configlang.py  csvview.py  dialogs.py  editor.py  help.py  isearch.py  killring.py  markdown.py  nav.py  pager.py  pane.py  preview.py  projectsearch.py  recovery.py  replace.py  rlang.py  session.py  terminal.py  theme.py  welcome.py  window.py
src/pike/: __init__.py  app.py  chords.py  commands.py  editor.py  help.py  isearch.py  preview.py  terminal.py  theme.py
tests/: conftest.py  helpers.py  test_bigtable.py  test_clipboard.py  test_completion.py  test_config.py  test_config_wrap.py  test_csvview.py  test_emacs.py  test_help.py  test_markdown.py  test_meta_keys.py  test_nav.py  test_pager.py  test_polish.py  test_preview.py  test_readonly_reload.py  test_recovery.py  test_robustness.py  test_saving.py  test_session.py  test_smoke.py  test_terminal.py  test_tier1.py  test_welcome.py  test_window.py
