[project]
name = "candat"
version = "0.1.0"
description = "A terminal IDE with emacs keybindings, built on Textual"
readme = "README.md"
authors = [
    { name = "Petr Novak", email = "petr@umbr.cas.cz" }
]
requires-python = ">=3.13"
dependencies = [
    "pyte>=0.8.2",
    "textual[syntax]>=8.2.8",
]

[project.scripts]
candat = "candat:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:This process.*is multi-threaded, use of forkpty:DeprecationWarning",
]
